Ignored work in progress filess

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /.vs
 /.vscode
 /GitHub - Data Structure Implementation Examples.url
+/Sequence Container Implementation Examples/DoublyLinkedList/To-Do DoublyLinkedList.hpp
