Replaced deprecated std::aligned_storage_t

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /.vscode
 /GitHub - Data Structure Implementation Examples.url
 /Sequence Container Implementation Examples/DoublyLinkedList/To-Do DoublyLinkedList.hpp
+/Student/Work In Progress
+/Enhancements.docx
