--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,5 @@
 /.vs
 /.vscode
 /GitHub - Data Structure Implementation Examples.url
-/Sequence Container Implementation Examples/DoublyLinkedList/To-Do DoublyLinkedList.hpp
-/Student/Work In Progress
 /Enhancements.docx
+/How to move Latest tag.docx
